# zokrates-remix-plugin

./: .babelrc  .dockerignore  .gitignore  1.44b8b5dc5600c94e6c83.js  1.d495f022c62d0d372095.js  1.worker.js  2.1ab3396630909d551fe9.js  2.2ff2869e400e8f72cc11.js  2.6265f38125d0f39777b6.js  2.a8be00b1b1189cf0bff4.js  2.baaaaad0155e2219613a.js  2.cb4bbfb15b497adb11c5.js  2.d9a527be3b8d79b79140.js  2.da795e9bf2486af85158.js  2.worker.js  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.latest  Dockerfile.stable  README.md  build_and_deploy_core.sh  docker-compose-prod.yml  docker-compose.yml  index.html  index.tsx  main.0a5ea3fe2f953318d8b9.js  main.115f23841cc71d90ad6e.js  main.1ab3396630909d551fe9.js  main.1c5e80c7374711af65a0.js  main.2ff2869e400e8f72cc11.js  main.44b8b5dc5600c94e6c83.js  main.6265f38125d0f39777b6.js  main.68f851dc39cc6093f049.js  main.a8be00b1b1189cf0bff4.js  main.accc8c86250a14978663.js  main.baaaaad0155e2219613a.js  main.baaaaad0155e2219613a.js.LICENSE.txt  main.cb4bbfb15b497adb11c5.js  main.d495f022c62d0d372095.js  (+13 more)
.circleci/: config.yml
.github/workflows/: build.yml  workflow.yml
compile/: Cargo.toml  package.json
core/: Cargo.toml  README.md  gulpfile.js  index.d.ts  index.js  package-lock.json  package.json  stdlib.json  utils.js  webpack.config.js
core/js/: index.js  library.js
core/lib/: index.d.ts  index.js  utils.js
core/src/: lib.rs
public/: index.html
remix-plugin/: Dockerfile  index.tsx  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js
remix-plugin/public/: index.html
remix-plugin/src/: App.css  App.tsx
scripts/: build.sh  deploy.sh
src/: App.css  App.tsx  worker.ts
src/common/: abiTypes.ts  types.tsx  utils.ts
src/components/: Accordion.tsx  AccordionElement.tsx  Alert.tsx  (+4 more)
(+78 files in other folders)
