[package]
name = "zokrates-core-js"
version = "1.0.0"
authors = ["Darko Macesic"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.50"
zokrates_core = { git = "https://github.com/ZoKrates/ZoKrates", branch = "simplify-resolver" }
zokrates_field = { git = "https://github.com/ZoKrates/ZoKrates", branch = "simplify-resolver" }

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
